# meta-office

./: .gitignore  README.md  pyproject.toml
mo_pygame/: client.py
